--- a/config.json
+++ b/config.json
@@ -2,6 +2,7 @@
     "app_title": "Experiment #1",
     "camera_type": "Fake camera",
     "pictures_dir_path": "/home/andrea/Projects/photobooth/pictures",
+    "picture_file_name": "WeddingPic",
     "regular_font": "components/fonts/Tinos-Regular.ttf",
     "cursive_font": "components/fonts/DancingScript-Regular.ttf"
 }
