--- a/config.json
+++ b/config.json
@@ -1,12 +1,12 @@
 {
     "app_title": "Experiment #1",
-    "camera_type": "Fake camera",
+    "camera_type": "Nikon DSC D3000",
     "watermark_path": "components/img/watermark-transparent.png",
     "watermark_color_map": {
         "255,255,255,255": [255, 255, 255, 180]
     },
     "picture_desired_ar": [6,4],
-    "pictures_dir_path": "/home/andrea/Projects/photobooth/pictures",
+    "pictures_dir_path": "/home/pi/photobooth/pictures",
     "picture_file_name": "WeddingPic",
     "regular_font": "components/fonts/Tinos-Regular.ttf",
     "cursive_font": "components/fonts/DancingScript-Regular.ttf",
