--- a/config.json
+++ b/config.json
@@ -1,17 +1,17 @@
 {
     "app_title": "Experiment #1",
-    "camera_type": "Nikon DSC D3000",
+    "camera_type": "Fake camera",
     "watermark_path": "components/img/watermark-transparent.png",
     "watermark_color_map": {
         "255,255,255,255": [255, 255, 255, 180]
     },
     "picture_desired_ar": [6,4],
-    "pictures_dir_path": "/home/pi/photobooth/pictures",
+    "pictures_dir_path": "/home/andrea/Projects/photobooth/pictures",
     "picture_file_name": "WeddingPic",
     "regular_font": "components/fonts/Tinos-Regular.ttf",
     "cursive_font": "components/fonts/DancingScript-Regular.ttf",
     "nprints_default": 1,
-    "printer_type": "HP_Envy_6500e_series_E862A7",
+    "printer_type": "Fake printer",
     "printer_options": {
         "media": "oe_4x-6-borderless_4x6in",
         "media-type": "com.hp-photographic-glossy",
